

Verilator 5.003 devel
==========================

**Minor:**

* Deprecate --no-threads; use --threads 1 for single threaded (#3703). [Kamil Rakoczy, Antmicro Ltd]
* Support named properties (#3667). [Ryszard Rozak, Antmicro Ltd]
* Internal AST improvements, also affect XML format (#3721). [Geza Lore]
* Fix return type of $countbits functions to int (#3725). [Ryszard Rozak, Antmicro Ltd]


Verilator 5.002 2022-10-29
==========================

**Major:**

* This is a major new release.
* Require C++20 for the new --timing features. Upgrading to a C++20 or
  newer compiler is strongly recommended.
* Support the Active and NBA scheduling regions as defined by the
  SystemVerilog standard (IEEE 1800-2017 chapter 4). This means all generated
  clocks are now simulated correctly (#3278, #3384). [Geza Lore, Shunyao CAD]
* Support timing controls (delays, event controls in any location, wait
  statements) and forks. [Krzysztof Bieganski, Antmicro Ltd]
  This may require adding --timing or --no-timing. See docs for details.
* Introduce a new combinational logic optimizer (DFG), that can yield
  significant performance improvements on some designs. [Geza Lore, Shunyao CAD]
* Add --binary option as alias of --main --exe --build --timing (#3625).
  For designs where C++ was only used to make a simple no-I/O testbench, we
  recommend abandoning that C++, and instead letting Verilator build it
  with --binary (or --main).

**Minor:**

* Split UNUSED warning into genvar, param, and signal warnings (#3607). [Topa Topino]
* Support standalone 'this' in classes (#2594) (#3248) (#3675). [Arkadiusz Kozdra, Antmicro Ltd]
* Support tristate select/extend (#3604). [Ryszard Rozak, Antmicro Ltd>
* Support linting for top module interfaces (#3635). [Kanad Kanhere]
* Support virtual interfaces (#3654). [Arkadiusz Kozdra, Antmicro Ltd]
* Support class type params without defaults (#3693). [Krzysztof Bieganski, Antmicro Ltd]
* Support empty generate_regions (#3695). [mpb27]