@@ -17,6 +17,7 @@ Verilator 5.003 devel
 * Support named properties (#3667). [Ryszard Rozak, Antmicro Ltd]
 * Internal AST improvements, also affect XML format (#3721). [Geza Lore]
 * Fix return type of $countbits functions to int (#3725). [Ryszard Rozak, Antmicro Ltd]
+* Fix missing UNUSED warnings with --coverage (#3736). [alejandro-castro-ortegon]
 
 
 Verilator 5.002 2022-10-29
